# Study_CUDA_Programming

./: .gitignore  README.md
part1_cuda_kernel/: README.md
part1_cuda_kernel/hello_cuda/: CMakeLists.txt  hello_cuda.cu  hello_parallel.cu
part1_cuda_kernel/memory_copy/: memcpy.cu
part1_cuda_kernel/section_02_hello_cuda/: CMakeLists.txt
part1_cuda_kernel/section_03_hello_linux/: CMakeLists.txt
part1_cuda_kernel/section_04_hello_cuda/: hello_cuda.cu  hello_parallel.cu
part1_cuda_kernel/section_05_cpu_kernel/: CMakeLists.txt  cpu_vector_add.cu
part1_cuda_kernel/section_05_hello_linux/: hello_linux.cu
part1_cuda_kernel/section_06_cuda_kernel/: CMakeLists.txt  common.cpp  cuda_vector_add.cu
part1_cuda_kernel/section_06_memory_copy/: CMakeLists.txt  memcpy.cu
part1_cuda_kernel/section_07_error_check/: CMakeLists.txt  error_check.cu
part1_cuda_kernel/section_09_error_check/: common.cpp  error_check.cu  error_detected.cu
part2_vector_addition/: README.md
part2_vector_addition/doc/: section10.md  section11.md  section12.md  section13.md  section14.md  section15.md
part2_vector_addition/section_10_elapsed_time/: CMakeLists.txt  argc.cu  chrono.cu  chronoClock.cu  chrono_macro.cu  sleep.cu
part2_vector_addition/section_12_1D_vector_addition/: CMakeLists.txt  common.cpp  vec_add_class.cu  vec_add_cuda_1024_core.cu  vec_add_cuda_error.cu  vec_add_cuda_single_core.cu  vec_add_host.cu  vec_add_host_kernel.cu
part2_vector_addition/section_13_giga_vector_addition/: CMakeLists.txt  common.cpp  giga_add_augmentation.cu  giga_add_clock.cu  giga_add_cuda_multi_core.cu  giga_add_cuda_single_core.cu  giga_add_host_cpu.cu
part2_vector_addition/section_14_AXPY_and_FMA/: CMakeLists.txt  lerp_cuda.cu  lerp_cuda_fma.cu  saxpy_cpu_host.cu  saxpy_cuda.cu  saxpy_cuda_fma.cu
part2_vector_addition/section_15_thread_and_GPU/: CMakeLists.txt  warp_lane.cu
part3_memory_structure/: README.md
part3_memory_structure/doc/: section16.md  section17.md  section18.md  section19.md  section20_21.md
part3_memory_structure/section_16_matrix_addition/: CMakeLists.txt  makefile  matadd_cuda.cu  matadd_host_cpu.cu  matadd_xyswap.cu
part3_memory_structure/section_17_cuda_malloc2d/: CMakeLists.txt  matadd_cuda.cu  matadd_pitched.cu
part3_memory_structure/section_18_filter3d/: CMakeLists.txt  matrix3dfilter_3d_pitched_ptr.cu  matrix3dfilter_cuda.cu  matrix3dfilter_host.cu
part3_memory_structure/section_19_memory_hierarchy/: CMakeLists.txt  common.cpp  saxpy_addr.cu  saxpy_cuda_fma.cu  saxpy_symbol.cu
part3_memory_structure/section_20_21_adjacent_differences/: CMakeLists.txt  adjdiff_cuda.cu  adjdiff_devQuery.cu  adjdiff_host.cu  adjdiff_overuse.cu  adjdiff_shared2.cu  adjdiff_shared_memory.cu  param_test.cu  ptr_test.cu  race_cond.cu  shared_mem.cu  synced.cu
part4_matrix_multiply/: README.md
part4_matrix_multiply/doc/: section22.md  section23.md  section24.md  section25.md  section26.md  section27.md
part4_matrix_multiply/section_22_matrix_copy/: 22a-matcpy-host.cpp  22d-matcpy-shared.cu  CMakeLists.txt  matcpy_cpu_memcpy.cu  matcpy_cuda_cpy.cu  matcpy_cuda_pitched.cu
part4_matrix_multiply/section_23_matrix_transpose/: CMakeLists.txt  transpose_cpu.cu  transpose_cuda_globalmem_naive.cu  transpose_cuda_sharedmem_naive.cu  transpose_cuda_sharedmem_optimized.cu  transpose_cuda_sharedmem_optimized_backconflict.cu
part4_matrix_multiply/section_24_matrix_multiplication/: CMakeLists.txt  matmul_cpu_outerK.cu  matmul_cpu_triple_for_loop.cu  matmul_cuda_globalmem.cu  matmul_cuda_more_improve_aligned2.cu  matmul_cuda_more_improve_alignedTile.cu  matmul_cuda_sharedmem_tiled_approach.cu  matmul_cuda_sharedmem_tiled_approach2.cu
part4_matrix_multiply/section_25_GEMM_general_matrix_to_matrix_multiplication/: CMakeLists.txt  gemm_cpu.cu  gemm_cpu_outerK.cu  gemm_cuda_alignedTile.cu  gemm_cuda_globalmem.cu  gemm_cuda_tile.cu  gemm_cuda_tile_optim.cu
part4_matrix_multiply/section_26_speed_check/: CMakeLists.txt  mem_clear_cpu.cu  mem_clear_cuda.cu  speed_variables.cu
part4_matrix_multiply/section_27_floating_point_numbers/: CMakeLists.txt  common.cpp  fastmath.cu
part5_atomic_operation/: README.md
part5_atomic_operation/doc/: section28.md  section29.md  section30.md  section31_32.md  section33.md
part5_atomic_operation/section28_control_flow/: evenodd.cu  evenodd_shared.cu  halfhalf.cu  halfhalf_shared.cu
part5_atomic_operation/section29_atomic_operation/: CMakeLists.txt  count_atomic.cu  count_block.cu  count_cas.cu  count_race.cu  count_shared.cu
part5_atomic_operation/section30_histogram_problem/: CMakeLists.txt  hist_cuda_globalmem.cu  hist_cuda_globalmem_4bytes.cu  hist_cuda_sharedmem.cu  hist_cuda_sharedmem_4bytes.cu  hist_host.cu  hist_host_4bytes.cu  image.cpp
part5_atomic_operation/section31_32_reduction_problem/: CMakeLists.txt  sum_addFirst.cu  sum_atomic.cu  sum_host.cu  sum_lastwarp.cu  sum_reduce.cu  sum_reversed.cu  sum_shared.cu  sum_twostep.cu  sum_warpshuffle.cu
part5_atomic_operation/section33_GEMV_general_matrix_to_vector_multiplication/: CMakeLists.txt  common.cpp  gemv_cuda_2d_kernel_partial.cu  gemv_cuda_globalmem.cu  gemv_cuda_tiled.cu  gemv_cuda_transpose.cu  gemv_host.cu
part6_search_sort/: README.md
part6_search_sort/doc/: section34.md  section35.md  section36.md  section37.md  section38.md  section39.md
part6_search_sort/section_34_linear_search/: CMakeLists.txt  search_cuda_atomic.cu  search_cuda_block.cu  search_cuda_stride.cu  search_host_find.cu  search_host_naive.cu
part6_search_sort/section_35_search_all/: CMakeLists.txt  search_all.cu  search_all_atomic.cu  search_all_block.cu  search_all_find.cu  search_all_stride.cu  search_all_stride2.cu
part6_search_sort/section_36_binary_search/: CMakeLists.txt  bsearch_cuda_block.cu  bsearch_host.cu  bsearch_host_bsearch.cu  bsearch_host_stl.cu
part6_search_sort/section_37_even_odd_sort/: CMakeLists.txt  cpu_bubble_block.cu  cpu_even_odd_block.cu  even_odd_block.cu  even_odd_global.cu  even_odd_outer_bubble.cu  qsort_block.cu  std_sort_block.cu
(+16 files in other folders)
